@@ -132,18 +132,20 @@ class RecipeLoader:
 
     def __init__(self, filename, cfg=None, repos=None, component=None,
                  branch=None, ignoreInstalled=False, directory=None,
-                 buildFlavor=None):
+                 buildFlavor=None, db=None,
+                 overrides = None):
         try:
             self._load(filename, cfg, repos, component,
                        branch, ignoreInstalled, directory, 
-                       buildFlavor=buildFlavor)
+                       buildFlavor=buildFlavor, db=db,
+                       overrides=overrides)
         except Exception, err:
             raise builderrors.LoadRecipeError('unable to load recipe file %s:\n%s'\
                                               % (filename, err))
 
     def _load(self, filename, cfg=None, repos=None, component=None,
               branch=None, ignoreInstalled=False, directory=None,
-              buildFlavor=None):
+              buildFlavor=None, db=None, overrides=None):
         self.recipes = {}
 
         if filename[0] != "/":
@@ -166,6 +168,7 @@ class RecipeLoader:
         # recipes out of the repository
         self.module.__dict__['cfg'] = cfg
         self.module.__dict__['repos'] = repos
+        self.module.__dict__['db'] = db
         self.module.__dict__['component'] = component
         self.module.__dict__['branch'] = branch
         self.module.__dict__['name'] = pkgname
@@ -173,7 +176,7 @@ class RecipeLoader:
         self.module.__dict__['loadedTroves'] = []
         self.module.__dict__['loadedSpecs'] = {}
         self.module.__dict__['buildFlavor'] = buildFlavor
-
+        self.module.__dict__['overrides'] = overrides
 
         # create the recipe class by executing the code in the recipe
         try:
@@ -219,6 +222,7 @@ class RecipeLoader:
 
         # all recipes that could be loaded by loadRecipe are loaded;
         # get rid of our references to cfg and repos
+        del self.module.__dict__['db']
         del self.module.__dict__['cfg']
         del self.module.__dict__['repos']
         del self.module.__dict__['component']
@@ -226,6 +230,7 @@ class RecipeLoader:
         del self.module.__dict__['name']
         del self.module.__dict__['ignoreInstalled']
         del self.module.__dict__['buildFlavor']
+        del self.module.__dict__['overrides']
 
         found = False
         for (name, obj) in self.module.__dict__.items():
@@ -343,7 +348,8 @@ def recipeLoaderFromSourceComponent(name, cfg, repos,
                                     filterVersions=False, 
                                     parentDir=None, 
                                     defaultToLatest = False,
-                                    buildFlavor = None):
+                                    buildFlavor = None, 
+                                    db = None, overrides = None):
     # FIXME parentDir specifies the directory to look for 
     # local copies of recipes called with loadRecipe.  If 
     # empty, we'll look in the tmp directory where we create the recipe
@@ -416,7 +422,8 @@ def recipeLoaderFromSourceComponent(name, cfg, repos,
         loader = RecipeLoader(recipeFile, cfg, repos, component, 
                               sourceComponent.getVersion().branch(),
                               ignoreInstalled=ignoreInstalled,
-                              directory=parentDir, buildFlavor=buildFlavor)
+                              directory=parentDir, buildFlavor=buildFlavor,
+                              db=db, overrides=overrides)
     finally:
         os.unlink(recipeFile)
     recipe = loader.getRecipe()
@@ -475,7 +482,6 @@ def loadInstalled(troveSpec, label=None):
     the default C{labelPath} that would be constructed would be:
     C{[conary.rpath.com@rpl:shadow, conary.rpath.com@rpl:devel]}
     """
-
     callerGlobals = sys._getframe(1).f_globals
     _loadRecipe(troveSpec, label, callerGlobals, True)
 
@@ -497,7 +503,7 @@ def _pickLatest(component, troves, labelPath=None):
 def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
     """ See docs for loadInstalledPackage and loadSuperClass.  """
 
-    def _findInstalledVersion(db, labelPath, name, versionStr, flavor):
+    def _findInstalledVersion(db, labelPath, name, versionStr, flavor, repos):
         """ Specialized search of the installed system along a labelPath, 
             defaulting to searching the whole system if the trove is not
             found along the label path.
@@ -506,6 +512,7 @@ def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
             returned, or C{None} if no trove is found.
         """
         # first search on the labelPath.  
+        troves = []
         try:
             troves = db.findTrove(labelPath, (name, versionStr, flavor))
             if len(troves) > 1:
@@ -515,30 +522,47 @@ def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
                     # branches.  This will give us _some_ result to move
                     # forward with, which is better than blowing up.
                     troves = [_pickLatest(name, troves, labelPath)]
-            if troves:
-                return troves[0][1].getSourceVersion(), troves[0][2]
         except errors.TroveNotFound:
             pass
-        if labelPath is None:
+        if not troves:
+            if labelPath is None:
+                return None
+            try:
+                troves = db.findTrove(None, (name, versionStr, flavor))
+                troves = getBestLoadRecipeChoices(None, troves)
+            except errors.TroveNotFound:
+                pass
+        if not troves:
             return None
-        try:
-            troves = db.findTrove(None, (name, versionStr, flavor))
-            troves = getBestLoadRecipeChoices(None, troves)
-            if len(troves) > 1:
-                troves = [_pickLatest(name, troves)]
-            if troves:
-                return troves[0][1].getSourceVersion(), troves[0][2]
-        except errors.TroveNotFound:
-            pass
+
+        if len(troves) > 1:
+            troves = [_pickLatest(name, troves)]
+        if troves:
+            sourceVersion =  troves[0][1].getSourceVersion()
+            flavor = troves[0][2]
+            sourceName = name.split(':')[0] + ':source'
+            noFlavor = deps.parseFlavor('')
+            if not repos.hasTrove(sourceName, sourceVersion, noFlavor):
+                while sourceVersion.hasParentVersion():
+                    sourceVersion = sourceVersion.parentVersion()
+                    if repos.hasTrove(sourceName, sourceVersion, noFlavor):
+                        break
+            return sourceVersion, flavor
         return None
 
 
     cfg = callerGlobals['cfg']
     repos = callerGlobals['repos']
+    db = callerGlobals.get('db', None)
     branch = callerGlobals['branch']
     parentPackageName = callerGlobals['name']
     parentDir = callerGlobals['directory']
     buildFlavor = callerGlobals.get('buildFlavor', None)
+    overrides = callerGlobals.get('overrides', None)
+    if overrides is None:
+        overrides = {}
+    if db is None:
+        db = database.Database(cfg.root, cfg.dbPath)
 
     if 'ignoreInstalled' in callerGlobals:
         alwaysIgnoreInstalled = callerGlobals['ignoreInstalled']
@@ -555,10 +579,25 @@ def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
     else:
         file = name + '.recipe'
 
+    if label and not versionSpec:
+        # If they used the old-style specification of label, we should 
+        # convert to new style for purposes of storing in troveInfo
+        troveSpec = '%s=%s' % (name, label)
+        if flavorSpec is not None and not troveSpec.isEmpty():
+            troveSpec = '%s[%s]' % (troveSpec, flavorSpec)
+
+    if troveSpec in overrides:
+        recipeToLoad, newOverrideDict = overrides[troveSpec]
+        if hasattr(newOverrideDict, '_loadedSpecs'):
+            # handle case where loadSpec is passed directly back in
+            newOverrideDict = newOverrideDict._loadedSpecs
+    else:
+        recipeToLoad = newOverrideDict = None
+
     #first check to see if a filename was specified, and if that 
     #recipe actually exists.   
     loader = None
-    if not (label or versionStr or (flavor is not None)):
+    if not (recipeToLoad or label or versionStr or (flavor is not None)):
         if name[0] != '/':
             localfile = parentDir + '/' + file
         else:
@@ -576,7 +615,8 @@ def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
                 use.setBuildFlagsFromFlavor(name, buildFlavor)
             loader = RecipeLoader(localfile, cfg, repos=repos,
                                   ignoreInstalled=alwaysIgnoreInstalled,
-                                  buildFlavor=buildFlavor)
+                                  buildFlavor=buildFlavor,
+                                  db=db)
 
     if not loader:
         if label:
@@ -588,17 +628,29 @@ def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
             labelPath.reverse()
         else:
             labelPath = None
-        if findInstalled and not alwaysIgnoreInstalled:
+
+        if cfg.installLabelPath:
+            if labelPath:
+                for label in cfg.installLabelPath:
+                    if label not in labelPath:
+                        labelPath.append(label)
+            else:
+                labelPath = cfg.installLabelPath
+
+        if not recipeToLoad and findInstalled and not alwaysIgnoreInstalled:
             # look on the local system to find a trove that is installed that
             # matches this loadrecipe request.  Use that trove's version
             # and flavor information to grab the source out of the repository
-            db = database.Database(cfg.root, cfg.dbPath)
-            parts = _findInstalledVersion(db, labelPath, name, versionStr, flavor)
+            parts = _findInstalledVersion(db, labelPath, name, versionStr, 
+                                          flavor, repos)
             if parts:
                 version, flavor = parts
                 while version.isOnLocalHost():
                     version = version.parentVersion()
                 versionStr = str(version)
+
+        if recipeToLoad:
+            name, versionStr, flavor = recipeToLoad
 
         if flavor is not None:
             # override the current flavor with the flavor found in the 
@@ -612,20 +664,14 @@ def _loadRecipe(troveSpec, label, callerGlobals, findInstalled):
                 oldBuildFlavor = buildFlavor
                 buildFlavor = deps.overrideFlavor(oldBuildFlavor, flavor)
                 use.setBuildFlagsFromFlavor(name, buildFlavor)
-        loader = recipeLoaderFromSourceComponent(name, cfg, repos, 
+        loader = recipeLoaderFromSourceComponent(name, cfg, repos,
                                                  labelPath=labelPath, 
                                                  versionStr=versionStr,
                                      ignoreInstalled=alwaysIgnoreInstalled,
                                      filterVersions=True,
                                      parentDir=parentDir,
-                                     defaultToLatest=True)[0]
-
-    if label and not versionSpec:
-        # If they used the old-style specification of label, we should 
-        # convert to new style for purposes of storing in troveInfo
-        troveSpec = '%s=%s' % (name, label)
-        if flavorSpec is not None and not troveSpec.isEmpty():
-            troveSpec = '%s[%s]' % (troveSpec, flavorSpec)
+                                     defaultToLatest=True, 
+                                     db=db, overrides=newOverrideDict)[0]
 
     for name, recipe in loader.allRecipes().items():
         # hide all recipes from RecipeLoader - we don't want to return
