@@ -54,6 +54,13 @@ Changes in @NEW@:
       software is intended to be running as a vmware guest. (CNY-1421)
     * Refactored the redirect build code and fixed bugs related to building
       flavored redirects (CNY-727)
+    * Added capability the loadrecipe code to allow the loadInstalled
+      and loadSuperClass troves to used to be passed in explicitly,
+      overriding the search mechanism, via the overrideLoad parameter
+    * If there's a conflict when loading installed troves, the latest trove
+      will be picked.
+    * loadInstall will now search the installLabelPath for troves to load
+      when it cannot find them any other way.
 
 Changes in 1.1.18:
   o Major Changes:
